controls/cis-eks/workloads/4.1/4.1.1/restrict-binding-clusteradmin.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: restrict-binding-clusteradmin
    annotations:
        policies.kyverno.io/title: Restrict Binding Cluster Admin
        policies.kyverno.io/category: RBAC Best Practices
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: RoleBinding, ClusterRoleBinding, RBAC
        policies.kyverno.io/minversion: 1.6.0
        kyverno.io/kubernetes-version: "1.23"
        policies.kyverno.io/description: >-
            Certain system groups exist in Kubernetes which grant permissions that are used for certain system-level functions yet typically never appropriate for other users. This policy prevents creating bindings for system:masters group.
spec:
    validationActions:
        - Audit
    evaluation:
        background:
            enabled: true
    matchConstraints:
        resourceRules:
            - apiGroups: ["rbac.authorization.k8s.io"]
              apiVersions: ["*"]
              resources: ["rolebindings", "clusterrolebindings"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: "has(object.roleRef) && object.roleRef.name != 'cluster-admin'"
          message: "Binding to cluster-admin is not allowed."
